--- a/content/resources/mit18_226_f22_jpg.md
+++ b/content/resources/mit18_226_f22_jpg.md
@@ -6,10 +6,10 @@ file: /ol-ocw-studio-app/courses/18-226-probabilistic-methods-in-combinatorics-f
 file_size: 92153
 file_type: image/jpeg
 image_metadata:
-  caption: "Photo of [Paul Erd\u0151s](https://en.wikipedia.org/wiki/Paul_Erd%C5%91s),\
-    \ a renowned Hungarian mathematician and the founder of the probabilistic method.\
-    \ (Image courtesy of [Kmhkmh](https://commons.wikimedia.org/wiki/File:Paul_Erd%C5%91s.jpg).\
-    \ Source: Wikimedia Commons. License CC BY.)"
+  caption: "Photo of {{% resource_link \"af537462-46d9-4913-b7e5-3879ebc93544\" \"\
+    Paul Erd\u0151s\" %}}, a renowned Hungarian mathematician and the founder of the\
+    \ probabilistic method. (Image courtesy of {{% resource_link \"3501b8a5-0347-4770-9cb5-e93a4301717a\"\
+    \ \"Kmhkmh\" %}}. Source: Wikimedia Commons. License CC BY.)"
   credit: ''
   image-alt: "Photo of Paul Erd\u0151s wearing glasses."
 learning_resource_types: []
